--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "dependencies": {
     "brain": "^0.7.0",
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "glob": "^6.0.1",
+    "midi-file-parser": "^1.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "bundleDependencies": [],
